--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				</div>
 				<div class="column">
-					<a href="ClothingScenario.html"><h2 id="subheading">Clogthing Store</h2></a>
+					<a href="ClothingScenario.html"><h2 id="subheading">Clothing Store</h2></a>
 					<img src="images/Clothing.png" style="width:100%" onclick="onClick(this)" alt="Clothing" >	
 				</div>
 				<div class="column">
